# finite-brain

./: AGENTS.md  CONTEXT.md  Cargo.toml  README.md  development.md
.github/workflows/: ci.yml
crates/finite-brain-app/: Cargo.toml
crates/finite-brain-app/src/: main.rs
crates/finite-brain-cli/: Cargo.toml
crates/finite-brain-cli/src/: admin.rs  args.rs  clock.rs  environment.rs  error.rs  http.rs  identity_authority.rs  lib.rs  models.rs  signer.rs  state.rs  sync_engine.rs
crates/finite-brain-core/: Cargo.toml
crates/finite-brain-core/src/: lib.rs  portability.rs
crates/finite-brain-core/src/portability/: working_tree.rs
crates/finite-brain-server/: Cargo.toml
crates/finite-brain-server/src/: contracts.rs  lib.rs  product-client.css  product-client.html  product-client.js  product-client.test.js  protected_routes.rs  responses.rs  smoke-ui.css  smoke-ui.html
crates/finite-brain-server/src/routes/: folders.rs  mod.rs  public.rs  sharing.rs  vaults.rs
crates/finite-brain-store/: Cargo.toml
crates/finite-brain-store/src/: folder_access.rs  lib.rs  links.rs  schema.rs  shared_folders.rs  vaults.rs
crates/finite-nostr/: Cargo.toml
crates/finite-nostr/src/: error.rs  lib.rs
docs/adr/: 0001-adopt-rust-workspace-and-finite-nostr.md  0003-keep-folder-object-crypto-in-finite-brain-core.md  0007-make-folders-the-llm-wiki-scope.md
docs/feature-dev/: 2026-06-23-rust-portable-v1-core-goal-ledger.md  2026-06-24-fbrain-agent-cli-ledger.md  2026-06-24-guided-smoke-vault-reader-ledger.md  2026-06-24-issue-24-ci-guardrails-review-packet.md  2026-06-24-issue-24-ci-guardrails-session.md  2026-06-24-obsidian-product-prototype-ledger.md  2026-06-24-rust-v1-ci-module-depth-goal-ledger.md  2026-06-24-rust-v1-product-parity-goal-ledger.md  2026-06-25-obsidian-product-client-refactor-ledger.md  2026-06-26-fbrain-transport-working-tree-sync-ledger.md  2026-06-26-folder-access-removal-ledger.md  2026-06-26-issue-44-working-tree-sync-session.md  2026-06-26-issue-45-fbrain-transport-session.md  2026-06-27-local-coderabbit-fbrain-transport-working-tree-sync.md  2026-07-03-access-management-ui-ledger.md  2026-07-03-asset-source-notes-coderabbit-round.md  2026-07-03-asset-source-notes-ledger.md  2026-07-07-email-invite-frontend-smoke-ledger.md
docs/improve-codebase/: 2026-06-24-fbrain-agent-cli-architecture-ledger.md  2026-06-24-rust-v1-architecture-ledger.md  2026-06-24-rust-v1-sync-records-ledger.md
docs/improve-context/: 2026-06-24-rust-v1-context-ledger.md  2026-06-24-rust-v1-hard-cut-spec-ledger.md
docs/readiness/: portable-v1-hardening.md
docs/runbooks/: product-client-parity-local-staging.md  smoke-alpha-backup-restore-cutover.md
docs/specs/: finitebrain-portability-spec.md
scripts/: seed-smoke-doc-pages.mjs  verify-obsidian-product-client.mjs
skills/finitebrain/: SKILL.md
skills/finitebrain-agent/: SKILL.md
skills/finitebrain-agent/references/: fbrain-cli.md
src/: main.rs
