[workspace]
members = [
    "crates/finite-brain-app",
    "crates/finite-brain-cli",
    "crates/finite-brain-core",
    "crates/finite-brain-server",
    "crates/finite-brain-store",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/finitecomputer/finite-brain"

[workspace.lints.rust]
unsafe_code = "forbid"
