[package]
name = "finite-brain-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Agent-native CLI for FiniteBrain Vault Working Trees."

[lib]
path = "src/lib.rs"

[[bin]]
name = "fbrain"
path = "src/main.rs"

[dependencies]
base64 = "0.22.1"
finite-brain-core = { path = "../finite-brain-core" }
# Shared Finite identity per the Finite Identity Contract v1: one key per
# user, whichever Finite tool runs first mints it. Pinned to the contract rev.
finite-identity = { git = "https://github.com/finitecomputer/finite-identity", rev = "8d0c60316ed4b2bcf7d54e79c287eb962007b4f9" }
finite-nostr = { path = "../finite-nostr" }
nostr = { version = "0.45.0-alpha.2", features = ["nip44", "os-rng"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
time = { version = "0.3.44", features = ["formatting"] }
ureq = "2.12.1"

[dev-dependencies]
tempfile = "3.23.0"

[lints]
workspace = true
