[package]
name = "finite-brain-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "FiniteBrain HTTP server and API surface."

[lib]
path = "src/lib.rs"

[dependencies]
axum = { version = "0.8.7", features = ["json", "tokio", "http1"] }
finite-brain-core = { path = "../finite-brain-core" }
finite-brain-store = { path = "../finite-brain-store" }
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.145"
tokio = { version = "1.52.3", features = ["macros", "rt"] }
tower = { version = "0.5.2", features = ["util"] }

[lints]
workspace = true
