[package]
name = "finite-brain-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "FiniteBrain HTTP server and API surface."

[lib]
path = "src/lib.rs"

[dependencies]
axum = { version = "0.8.7", features = ["json", "tokio", "http1"] }
base64 = "0.22.1"
finite-brain-core = { path = "../finite-brain-core" }
finite-brain-store = { path = "../finite-brain-store" }
finite-nostr = { git = "https://github.com/finitecomputer/finite-nostr.git", branch = "feature/rust-portable-v1-core" }
nostr = { version = "0.45.0-alpha.2", features = ["nip98", "os-rng"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
time = { version = "0.3.44", features = ["formatting"] }

[dev-dependencies]
tokio = { version = "1.52.3", features = ["macros", "rt"] }
tower = { version = "0.5.2", features = ["util"] }

[lints]
workspace = true
